[tool.poetry]
name = "tmnf-viewer"
version = "0.1.0"
description = ""
authors = ["helo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
dependency-injector = "^4.41.0"
python-multipart = "^0.0.9"
pygbx = "^0.3"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
